--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>MusicPlayer</title>
+    <title>Music Player</title>
   </head>
   <body>
     <div class="player-wrapper">
@@ -19,11 +19,13 @@
 
       <div class="songPlayer">
         <div class="songHeader">
-          <div class="songHeader__title"></div>
-          <div class="songHeader__name"></div>
-        </div>
+          <div class="songHeader__data">
+            <h1 class="songHeader__title">Hand of blood</h1>
+            <p class="songHeader__name">BFMV</p>
+          </div>
 
-        <div class="songHeader__spotifyBtn"></div>
+          <div class="songHeader__spotifyBtn"></div>
+        </div>
 
         <div class="songControll">
           <div class="songControll__repeatBtn"></div>
