--- a/index.html
+++ b/index.html
@@ -20,23 +20,33 @@
       <div class="songPlayer">
         <div class="songHeader">
           <div class="songHeader__data">
-            <h1 class="songHeader__title">Hand of blood</h1>
-            <p class="songHeader__name">BFMV</p>
+            <h1 class="songHeader__title">unknown</h1>
+            <p class="songHeader__name">unknown</p>
           </div>
 
           <div class="songHeader__spotifyBtn"></div>
         </div>
 
+        <div class="progressBar">
+          <div class="progressBar__line"></div>
+          <div class="progressBar__time"></div>
+        </div>
+
         <div class="songControll">
           <div class="songControll__repeatBtn"></div>
-          <div class="songControll__prevBtn"></div>
-          <div class="songControll__playPauseBtn"></div>
-          <div class="songControll__nextBtn"></div>
-          <div class="songControll__likeBtn"></div>
+
+          <div class="songControll-panel">
+            <div class="songControll__prevBtn"></div>
+            <div class="songControll__playPauseBtn"></div>
+            <div class="songControll__nextBtn"></div>
+          </div>
+
+          <div class="songControll__favBtn"></div>
         </div>
       </div>
     </div>
 
+    <audio src=""></audio>
     <script src="./app.js"></script>
   </body>
 </html>
