--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
     <title>Music Player</title>
   </head>
   <body>
@@ -20,8 +21,8 @@
       <div class="songPlayer">
         <div class="songHeader">
           <div class="songHeader__data">
-            <h1 class="songHeader__title">unknown</h1>
-            <p class="songHeader__name">unknown</p>
+            <h1 class="songHeader__title">Bullet for my Valentine</h1>
+            <p class="songHeader__name">Tears Dont Fall</p>
           </div>
 
           <div class="songHeader__spotifyBtn"></div>
@@ -29,7 +30,7 @@
 
         <div class="progressBar">
           <div class="progressBar__line"></div>
-          <div class="progressBar__time"></div>
+          <div class="progressBar__time">00:00</div>
         </div>
 
         <div class="songControll">
