--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </div>
 
         <div class="progressBar">
-          <div class="progressBar__line"></div>
+          <div class="progressBar__line">
+            <div class="progressBar__progress"></div>
+          </div>
           <div class="progressBar__time">00:00</div>
         </div>
 
