--- a/index.html
+++ b/index.html
@@ -36,15 +36,25 @@
         </div>
 
         <div class="songControll">
-          <div class="songControll__repeatBtn"></div>
+          <a href="#">
+            <div class="songControll__repeatBtn"></div>
+          </a>
 
           <div class="songControll-panel">
-            <div class="songControll__prevBtn"></div>
-            <div class="songControll__playPauseBtn"></div>
-            <div class="songControll__nextBtn"></div>
+            <a href="#">
+              <div class="songControll__prevBtn"></div>
+            </a>
+            <a href="#">
+              <div class="songControll__playPauseBtn"></div>
+            </a>
+            <a href="#">
+              <div class="songControll__nextBtn"></div>
+            </a>
           </div>
 
-          <div class="songControll__favBtn"></div>
+          <a href="#">
+            <div class="songControll__favBtn"></div>
+          </a>
         </div>
       </div>
     </div>
