--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <a href="#">
             <div class="songControll__repeatBtn"></div>
           </a>
+          <a href="#">
+            <div class="songControll__volumeBtn"></div>
+          </a>
 
           <div class="songControll-panel">
             <a href="#">
