--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="progressBar">
           <div class="progressBar__line">
             <div class="progressBar__progress"></div>
+            <div class="progressBar__progress-ball"></div>
           </div>
           <div class="progressBar__time">00:00</div>
         </div>
